--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,8 +39,8 @@
 
         <!-- Goolge API Key -->
         <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBCY4ekfsMbuHBqB4cCSc4fA3M6YC3Isr4" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBCY4ekfsMbuHBqB4cCSc4fA3M6YC3Isr4"/>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
