--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.creative.timesetter">
+    package="com.morydes.rideshare">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,19 +13,19 @@
 
 
     <permission
-        android:name="com.creative.timesetter.permission.MAPS_RECEIVE"
+        android:name="com.morydes.rideshare.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
     <uses-permission android:name="com.creative.timesetter.permission.MAPS_RECEIVE" />
 
     <application
-        android:name=".appdata.MydApplication"
+        android:name="com.morydes.rideshare.appdata.MydApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".MainActivity"
+        <activity android:name="com.morydes.rideshare.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name">
             <intent-filter>
@@ -46,7 +46,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <receiver android:name=".receiver.AlarmReceiver" android:process=":remote" />
+        <receiver android:name="com.morydes.rideshare.receiver.AlarmReceiver" android:process=":remote" />
     </application>
 
 </manifest>
