--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,9 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.google.android.gms:play-services-location:10.2.4'
-    compile 'com.google.android.gms:play-services-maps:10.2.4'
-    compile 'com.google.android.gms:play-services-places:10.2.4'
+    compile 'com.google.android.gms:play-services-location:12.0.1'
+    compile 'com.google.android.gms:play-services-maps:12.0.1'
+    compile 'com.google.android.gms:play-services-places:12.0.1'
+    compile 'com.google.android.gms:play-services-ads:12.0.1'
     testCompile 'junit:junit:4.12'
 }
