--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 
     <permission
@@ -25,7 +25,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name="com.morydes.rideshare.MainActivity"
+        <activity
+            android:name="com.morydes.rideshare.MainActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name">
             <intent-filter>
@@ -35,18 +36,23 @@
             </intent-filter>
         </activity>
 
-
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
 
 
         <!-- Goolge API Key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBCY4ekfsMbuHBqB4cCSc4fA3M6YC3Isr4"/>
+            android:value="AIzaSyBCY4ekfsMbuHBqB4cCSc4fA3M6YC3Isr4" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <receiver android:name="com.morydes.rideshare.receiver.AlarmReceiver" android:process=":remote" />
+        <receiver
+            android:name="com.morydes.rideshare.receiver.AlarmReceiver"
+            android:process=":remote" />
     </application>
 
 </manifest>
