--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,34 +4,32 @@
 
     <!-- VERY IMPORTANT! Don't forget this permission, or in-app billing won't work. -->
     <uses-permission android:name="com.android.vending.BILLING" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!-- Required to show current location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
 
     <permission
         android:name="com.morydes.rideshare.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="com.creative.timesetter.permission.MAPS_RECEIVE" />
 
     <application
-        android:name="com.morydes.rideshare.appdata.MydApplication"
+        android:name=".appdata.MydApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity
-            android:name="com.morydes.rideshare.MainActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:label="@string/app_name">
+
+        <activity android:name=".SplashActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,10 +38,15 @@
         </activity>
 
         <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:label="@string/app_name">
+
+        </activity>
+        <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
-
 
         <!-- Goolge API Key -->
         <meta-data
@@ -54,8 +57,10 @@
             android:value="@integer/google_play_services_version" />
 
         <receiver
-            android:name="com.morydes.rideshare.receiver.AlarmReceiver"
+            android:name=".receiver.AlarmReceiver"
             android:process=":remote" />
+
+
     </application>
 
 </manifest>
